// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box demo examples basic 1`] = `
.glamor-12::after,
[data-glamor-12]::after,
.glamor-12[data-simulate-after],
[data-glamor-12][data-simulate-after] {
  clear: both;
  content: "";
  display: table;
}

.glamor-12 > *:not(:last-child),
[data-glamor-12] > *:not(:last-child) {
  margin-bottom: 1rem;
}

.glamor-1,
[data-glamor-1] {
  align-items: center;
  background-color: #e6eefc;
  color: #1f5dc2;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #c2dbfc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0 *,
[data-glamor-0] *,
.glamor-0 *::before,
[data-glamor-0] *::before,
.glamor-0 *::after,
[data-glamor-0] *::after {
  box-sizing: inherit;
}

.glamor-4,
[data-glamor-4] {
  align-items: center;
  background-color: #e6eefc;
  color: #1f5dc2;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #c2dbfc;
  position: relative;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-4::before,
[data-glamor-4]::before,
.glamor-4[data-simulate-before],
[data-glamor-4][data-simulate-before] {
  border-color: rgba(194,219,252,0.5);
  border-style: solid;
  border-width: 1.5em;
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.glamor-3,
[data-glamor-3] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  padding-bottom: 1.5em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  padding-top: 1.5em;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  position: relative;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-3 *,
[data-glamor-3] *,
.glamor-3 *::before,
[data-glamor-3] *::before,
.glamor-3 *::after,
[data-glamor-3] *::after {
  box-sizing: inherit;
}

.glamor-3::before,
[data-glamor-3]::before,
.glamor-3[data-simulate-before],
[data-glamor-3][data-simulate-before] {
  border-color: rgba(194,219,252,0.5);
  border-style: solid;
  border-width: 1.5em;
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.glamor-6,
[data-glamor-6] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-right: 50%;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-6 *,
[data-glamor-6] *,
.glamor-6 *::before,
[data-glamor-6] *::before,
.glamor-6 *::after,
[data-glamor-6] *::after {
  box-sizing: inherit;
}

.glamor-9,
[data-glamor-9] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-left: auto;
  margin-right: auto;
  width: 10em;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-9 *,
[data-glamor-9] *,
.glamor-9 *::before,
[data-glamor-9] *::before,
.glamor-9 *::after,
[data-glamor-9] *::after {
  box-sizing: inherit;
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "Box": [Function],
            "DemoLayout": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <glamorous(div)>
              <div
                className="glamor-12"
              >
                <glamorous(Box)>
                  <Box
                    className="glamor-1"
                    element="div"
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                    >
                      <div
                        className="glamor-0"
                      >
                        A
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
                <glamorous(Box)
                  padding="lg"
                >
                  <Box
                    className="glamor-4"
                    element="div"
                    padding="lg"
                  >
                    <glamorous(div)
                      className="glamor-4"
                      element="div"
                      padding="lg"
                    >
                      <div
                        className="glamor-3"
                      >
                        B
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
                <glamorous(Box)
                  marginRight="50%"
                >
                  <Box
                    className="glamor-1"
                    element="div"
                    marginRight="50%"
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                      marginRight="50%"
                    >
                      <div
                        className="glamor-6"
                      >
                        C
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
                <glamorous(Box)
                  marginHorizontal="auto"
                  width="10em"
                >
                  <Box
                    className="glamor-1"
                    element="div"
                    marginHorizontal="auto"
                    width="10em"
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                      marginHorizontal="auto"
                      width="10em"
                    >
                      <div
                        className="glamor-9"
                      >
                        D
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
              </div>
            </glamorous(div)>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Box demo examples height 1`] = `
.glamor-1,
[data-glamor-1] {
  align-items: center;
  background-color: #e6eefc;
  color: #1f5dc2;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #c2dbfc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-9::after,
[data-glamor-9]::after,
.glamor-9[data-simulate-after],
[data-glamor-9][data-simulate-after] {
  clear: both;
  content: "";
  display: table;
}

.glamor-9 > *:not(:last-child),
[data-glamor-9] > *:not(:last-child) {
  margin-bottom: 1rem;
  margin-right: 5%;
}

.glamor-9 > *,
[data-glamor-9] > * {
  float: left;
  width: 30%;
}

.glamor-9 > *[class],
[data-glamor-9] > *[class] {
  margin-bottom: 0;
}

.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  height: 10em;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0 *,
[data-glamor-0] *,
.glamor-0 *::before,
[data-glamor-0] *::before,
.glamor-0 *::after,
[data-glamor-0] *::after {
  box-sizing: inherit;
}

.glamor-3,
[data-glamor-3] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  height: 100px;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-3 *,
[data-glamor-3] *,
.glamor-3 *::before,
[data-glamor-3] *::before,
.glamor-3 *::after,
[data-glamor-3] *::after {
  box-sizing: inherit;
}

.glamor-6,
[data-glamor-6] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  height: 33.33333333333333%;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-6 *,
[data-glamor-6] *,
.glamor-6 *::before,
[data-glamor-6] *::before,
.glamor-6 *::after,
[data-glamor-6] *::after {
  box-sizing: inherit;
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "Box": [Function],
            "DemoLayout": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <glamorous(glamorous(div))>
              <div
                className="glamor-9"
              >
                <glamorous(Box)
                  height="10em"
                >
                  <Box
                    className="glamor-1"
                    element="div"
                    height="10em"
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                      height="10em"
                    >
                      <div
                        className="glamor-0"
                      >
                        A
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
                <glamorous(Box)
                  height={100}
                >
                  <Box
                    className="glamor-1"
                    element="div"
                    height={100}
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                      height={100}
                    >
                      <div
                        className="glamor-3"
                      >
                        B
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
                <glamorous(Box)
                  height={0.3333333333333333}
                >
                  <Box
                    className="glamor-1"
                    element="div"
                    height={0.3333333333333333}
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                      height={0.3333333333333333}
                    >
                      <div
                        className="glamor-6"
                      >
                        C
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
              </div>
            </glamorous(glamorous(div))>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Box demo examples inline 1`] = `
.glamor-9::after,
[data-glamor-9]::after,
.glamor-9[data-simulate-after],
[data-glamor-9][data-simulate-after] {
  clear: both;
  content: "";
  display: table;
}

.glamor-9 > *:not(:last-child),
[data-glamor-9] > *:not(:last-child) {
  margin-bottom: 1rem;
}

.glamor-9 > *[class],
[data-glamor-9] > *[class] {
  margin-bottom: 0;
}

.glamor-1,
[data-glamor-1] {
  align-items: center;
  background-color: #e6eefc;
  color: #1f5dc2;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  justify-content: center;
  outline: 1px solid #c2dbfc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0 *,
[data-glamor-0] *,
.glamor-0 *::before,
[data-glamor-0] *::before,
.glamor-0 *::after,
[data-glamor-0] *::after {
  box-sizing: inherit;
}

.glamor-3,
[data-glamor-3] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  width: 100px;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-3 *,
[data-glamor-3] *,
.glamor-3 *::before,
[data-glamor-3] *::before,
.glamor-3 *::after,
[data-glamor-3] *::after {
  box-sizing: inherit;
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "Box": [Function],
            "DemoLayout": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <glamorous(glamorous(div))>
              <div
                className="glamor-9"
              >
                <glamorous(Box)
                  inline={true}
                >
                  <Box
                    className="glamor-1"
                    element="div"
                    inline={true}
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                      inline={true}
                    >
                      <div
                        className="glamor-0"
                      >
                        A
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
                <glamorous(Box)
                  inline={true}
                  width={100}
                >
                  <Box
                    className="glamor-1"
                    element="div"
                    inline={true}
                    width={100}
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                      inline={true}
                      width={100}
                    >
                      <div
                        className="glamor-3"
                      >
                        B
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
                <glamorous(Box)
                  inline={true}
                >
                  <Box
                    className="glamor-1"
                    element="div"
                    inline={true}
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                      inline={true}
                    >
                      <div
                        className="glamor-0"
                      >
                        C
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
              </div>
            </glamorous(glamorous(div))>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Box demo examples precedence 1`] = `
.glamor-1,
[data-glamor-1] {
  align-items: center;
  background-color: #e6eefc;
  color: #1f5dc2;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #c2dbfc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-bottom: 10px;
  margin-left: 30px;
  margin-right: 20px;
  margin-top: 10px;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0 *,
[data-glamor-0] *,
.glamor-0 *::before,
[data-glamor-0] *::before,
.glamor-0 *::after,
[data-glamor-0] *::after {
  box-sizing: inherit;
}

.glamor-3,
[data-glamor-3] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-bottom: 10px;
  margin-left: 20px;
  margin-right: 30px;
  margin-top: 10px;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-3 *,
[data-glamor-3] *,
.glamor-3 *::before,
[data-glamor-3] *::before,
.glamor-3 *::after,
[data-glamor-3] *::after {
  box-sizing: inherit;
}

.glamor-6,
[data-glamor-6] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-bottom: 10px;
  margin-left: 40px;
  margin-right: 20px;
  margin-top: 10px;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-6 *,
[data-glamor-6] *,
.glamor-6 *::before,
[data-glamor-6] *::before,
.glamor-6 *::after,
[data-glamor-6] *::after {
  box-sizing: inherit;
}

.glamor-9,
[data-glamor-9] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-bottom: 10px;
  margin-left: 20px;
  margin-right: 40px;
  margin-top: 10px;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-9 *,
[data-glamor-9] *,
.glamor-9 *::before,
[data-glamor-9] *::before,
.glamor-9 *::after,
[data-glamor-9] *::after {
  box-sizing: inherit;
}

.glamor-12,
[data-glamor-12] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-bottom: 20px;
  margin-left: 10px;
  margin-right: 10px;
  margin-top: 40px;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-12 *,
[data-glamor-12] *,
.glamor-12 *::before,
[data-glamor-12] *::before,
.glamor-12 *::after,
[data-glamor-12] *::after {
  box-sizing: inherit;
}

.glamor-15,
[data-glamor-15] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-bottom: 40px;
  margin-left: 10px;
  margin-right: 10px;
  margin-top: 20px;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-15 *,
[data-glamor-15] *,
.glamor-15 *::before,
[data-glamor-15] *::before,
.glamor-15 *::after,
[data-glamor-15] *::after {
  box-sizing: inherit;
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "Box": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <div>
              <glamorous(Box)
                margin={10}
                marginHorizontal={20}
                marginStart={30}
              >
                <Box
                  className="glamor-1"
                  element="div"
                  margin={10}
                  marginHorizontal={20}
                  marginStart={30}
                >
                  <glamorous(div)
                    className="glamor-1"
                    element="div"
                    margin={10}
                    marginHorizontal={20}
                    marginStart={30}
                  >
                    <div
                      className="glamor-0"
                    >
                      10 20 10 30
                    </div>
                  </glamorous(div)>
                </Box>
              </glamorous(Box)>
              <glamorous(Box)
                margin={10}
                marginEnd={30}
                marginHorizontal={20}
              >
                <Box
                  className="glamor-1"
                  element="div"
                  margin={10}
                  marginEnd={30}
                  marginHorizontal={20}
                >
                  <glamorous(div)
                    className="glamor-1"
                    element="div"
                    margin={10}
                    marginEnd={30}
                    marginHorizontal={20}
                  >
                    <div
                      className="glamor-3"
                    >
                      10 30 10 20
                    </div>
                  </glamorous(div)>
                </Box>
              </glamorous(Box)>
              <glamorous(Box)
                margin={10}
                marginHorizontal={20}
                marginLeft={40}
                marginStart={30}
              >
                <Box
                  className="glamor-1"
                  element="div"
                  margin={10}
                  marginHorizontal={20}
                  marginLeft={40}
                  marginStart={30}
                >
                  <glamorous(div)
                    className="glamor-1"
                    element="div"
                    margin={10}
                    marginHorizontal={20}
                    marginLeft={40}
                    marginStart={30}
                  >
                    <div
                      className="glamor-6"
                    >
                      10 20 10 40
                    </div>
                  </glamorous(div)>
                </Box>
              </glamorous(Box)>
              <glamorous(Box)
                margin={10}
                marginEnd={30}
                marginHorizontal={20}
                marginRight={40}
              >
                <Box
                  className="glamor-1"
                  element="div"
                  margin={10}
                  marginEnd={30}
                  marginHorizontal={20}
                  marginRight={40}
                >
                  <glamorous(div)
                    className="glamor-1"
                    element="div"
                    margin={10}
                    marginEnd={30}
                    marginHorizontal={20}
                    marginRight={40}
                  >
                    <div
                      className="glamor-9"
                    >
                      10 40 10 20
                    </div>
                  </glamorous(div)>
                </Box>
              </glamorous(Box)>
              <glamorous(Box)
                margin={10}
                marginTop={40}
                marginVertical={20}
              >
                <Box
                  className="glamor-1"
                  element="div"
                  margin={10}
                  marginTop={40}
                  marginVertical={20}
                >
                  <glamorous(div)
                    className="glamor-1"
                    element="div"
                    margin={10}
                    marginTop={40}
                    marginVertical={20}
                  >
                    <div
                      className="glamor-12"
                    >
                      40 10 20 10
                    </div>
                  </glamorous(div)>
                </Box>
              </glamorous(Box)>
              <glamorous(Box)
                margin={10}
                marginBottom={40}
                marginVertical={20}
              >
                <Box
                  className="glamor-1"
                  element="div"
                  margin={10}
                  marginBottom={40}
                  marginVertical={20}
                >
                  <glamorous(div)
                    className="glamor-1"
                    element="div"
                    margin={10}
                    marginBottom={40}
                    marginVertical={20}
                  >
                    <div
                      className="glamor-15"
                    >
                      20 10 40 10
                    </div>
                  </glamorous(div)>
                </Box>
              </glamorous(Box)>
            </div>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Box demo examples responsive 1`] = `
.glamor-1,
[data-glamor-1] {
  align-items: center;
  background-color: #e6eefc;
  color: #1f5dc2;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #c2dbfc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-right: 50px;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0 *,
[data-glamor-0] *,
.glamor-0 *::before,
[data-glamor-0] *::before,
.glamor-0 *::after,
[data-glamor-0] *::after {
  box-sizing: inherit;
}

@media (min-width: 800px) and (max-width: 1023px) {
  .glamor-0,
  [data-glamor-0] {
    margin-right: 100px;
  }
}

@media (min-width: 1024px) {
  .glamor-0,
  [data-glamor-0] {
    margin-right: 150px;
  }
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "Box": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <glamorous(Box)
              breakpoints={
                Array [
                  800,
                  "wide",
                ]
              }
              marginRight={
                Array [
                  50,
                  100,
                  150,
                ]
              }
            >
              <Box
                breakpoints={
                  Array [
                    800,
                    "wide",
                  ]
                }
                className="glamor-1"
                element="div"
                marginRight={
                  Array [
                    50,
                    100,
                    150,
                  ]
                }
              >
                <glamorous(div)
                  breakpoints={
                    Array [
                      800,
                      "wide",
                    ]
                  }
                  className="glamor-1"
                  element="div"
                  marginRight={
                    Array [
                      50,
                      100,
                      150,
                    ]
                  }
                >
                  <div
                    className="glamor-0"
                  >
                    A
                  </div>
                </glamorous(div)>
              </Box>
            </glamorous(Box)>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Box demo examples rtl 1`] = `
.glamor-9::after,
[data-glamor-9]::after,
.glamor-9[data-simulate-after],
[data-glamor-9][data-simulate-after] {
  clear: both;
  content: "";
  display: table;
}

.glamor-9 > *:not(:last-child),
[data-glamor-9] > *:not(:last-child) {
  margin-bottom: 1rem;
}

.glamor-1,
[data-glamor-1] {
  align-items: center;
  background-color: #e6eefc;
  color: #1f5dc2;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #c2dbfc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-left: 1.5em;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0 *,
[data-glamor-0] *,
.glamor-0 *::before,
[data-glamor-0] *::before,
.glamor-0 *::after,
[data-glamor-0] *::after {
  box-sizing: inherit;
}

.glamor-3,
[data-glamor-3] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-right: 1.5em;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-3 *,
[data-glamor-3] *,
.glamor-3 *::before,
[data-glamor-3] *::before,
.glamor-3 *::after,
[data-glamor-3] *::after {
  box-sizing: inherit;
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "Box": [Function],
            "DemoLayout": [Function],
            "ThemeProvider": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <div
              dir="rtl"
            >
              <ThemeProvider>
                <ThemeProvider>
                  <glamorous(div)>
                    <div
                      className="glamor-9"
                    >
                      <glamorous(Box)
                        marginLeft="lg"
                      >
                        <Box
                          className="glamor-1"
                          element="div"
                          marginLeft="lg"
                        >
                          <glamorous(div)
                            className="glamor-1"
                            element="div"
                            marginLeft="lg"
                          >
                            <div
                              className="glamor-0"
                            >
                              اليسار
                            </div>
                          </glamorous(div)>
                        </Box>
                      </glamorous(Box)>
                      <glamorous(Box)
                        marginStart="lg"
                      >
                        <Box
                          className="glamor-1"
                          element="div"
                          marginStart="lg"
                        >
                          <glamorous(div)
                            className="glamor-1"
                            element="div"
                            marginStart="lg"
                          >
                            <div
                              className="glamor-3"
                            >
                              بداية
                            </div>
                          </glamorous(div)>
                        </Box>
                      </glamorous(Box)>
                      <glamorous(Box)
                        marginEnd="lg"
                      >
                        <Box
                          className="glamor-1"
                          element="div"
                          marginEnd="lg"
                        >
                          <glamorous(div)
                            className="glamor-1"
                            element="div"
                            marginEnd="lg"
                          >
                            <div
                              className="glamor-0"
                            >
                              النهاية
                            </div>
                          </glamorous(div)>
                        </Box>
                      </glamorous(Box)>
                    </div>
                  </glamorous(div)>
                </ThemeProvider>
              </ThemeProvider>
            </div>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Box demo examples spacing 1`] = `
.glamor-15::after,
[data-glamor-15]::after,
.glamor-15[data-simulate-after],
[data-glamor-15][data-simulate-after] {
  clear: both;
  content: "";
  display: table;
}

.glamor-15 > *:not(:last-child),
[data-glamor-15] > *:not(:last-child) {
  margin-bottom: 1rem;
}

.glamor-1,
[data-glamor-1] {
  align-items: center;
  background-color: #e6eefc;
  color: #1f5dc2;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #c2dbfc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0 *,
[data-glamor-0] *,
.glamor-0 *::before,
[data-glamor-0] *::before,
.glamor-0 *::after,
[data-glamor-0] *::after {
  box-sizing: inherit;
}

.glamor-3,
[data-glamor-3] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-right: 2em;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-3 *,
[data-glamor-3] *,
.glamor-3 *::before,
[data-glamor-3] *::before,
.glamor-3 *::after,
[data-glamor-3] *::after {
  box-sizing: inherit;
}

.glamor-6,
[data-glamor-6] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-right: 6em;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-6 *,
[data-glamor-6] *,
.glamor-6 *::before,
[data-glamor-6] *::before,
.glamor-6 *::after,
[data-glamor-6] *::after {
  box-sizing: inherit;
}

.glamor-9,
[data-glamor-9] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-right: 120px;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-9 *,
[data-glamor-9] *,
.glamor-9 *::before,
[data-glamor-9] *::before,
.glamor-9 *::after,
[data-glamor-9] *::after {
  box-sizing: inherit;
}

.glamor-12,
[data-glamor-12] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-right: 33.33333333333333%;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-12 *,
[data-glamor-12] *,
.glamor-12 *::before,
[data-glamor-12] *::before,
.glamor-12 *::after,
[data-glamor-12] *::after {
  box-sizing: inherit;
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "Box": [Function],
            "DemoLayout": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <glamorous(div)>
              <div
                className="glamor-15"
              >
                <glamorous(Box)>
                  <Box
                    className="glamor-1"
                    element="div"
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                    >
                      <div
                        className="glamor-0"
                      >
                        none
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
                <glamorous(Box)
                  marginRight="xl"
                >
                  <Box
                    className="glamor-1"
                    element="div"
                    marginRight="xl"
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                      marginRight="xl"
                    >
                      <div
                        className="glamor-3"
                      >
                        xl
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
                <glamorous(Box)
                  marginRight="6em"
                >
                  <Box
                    className="glamor-1"
                    element="div"
                    marginRight="6em"
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                      marginRight="6em"
                    >
                      <div
                        className="glamor-6"
                      >
                        6em
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
                <glamorous(Box)
                  marginRight={120}
                >
                  <Box
                    className="glamor-1"
                    element="div"
                    marginRight={120}
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                      marginRight={120}
                    >
                      <div
                        className="glamor-9"
                      >
                        120
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
                <glamorous(Box)
                  marginRight={0.3333333333333333}
                >
                  <Box
                    className="glamor-1"
                    element="div"
                    marginRight={0.3333333333333333}
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                      marginRight={0.3333333333333333}
                    >
                      <div
                        className="glamor-12"
                      >
                        1/3
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
              </div>
            </glamorous(div)>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Box demo examples width 1`] = `
.glamor-9::after,
[data-glamor-9]::after,
.glamor-9[data-simulate-after],
[data-glamor-9][data-simulate-after] {
  clear: both;
  content: "";
  display: table;
}

.glamor-9 > *:not(:last-child),
[data-glamor-9] > *:not(:last-child) {
  margin-bottom: 1rem;
}

.glamor-1,
[data-glamor-1] {
  align-items: center;
  background-color: #e6eefc;
  color: #1f5dc2;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #c2dbfc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0,
[data-glamor-0] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  width: 10em;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-0 *,
[data-glamor-0] *,
.glamor-0 *::before,
[data-glamor-0] *::before,
.glamor-0 *::after,
[data-glamor-0] *::after {
  box-sizing: inherit;
}

.glamor-3,
[data-glamor-3] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  width: 100px;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-3 *,
[data-glamor-3] *,
.glamor-3 *::before,
[data-glamor-3] *::before,
.glamor-3 *::after,
[data-glamor-3] *::after {
  box-sizing: inherit;
}

.glamor-6,
[data-glamor-6] {
  box-sizing: border-box;
  color: #1f5dc2;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #c2dbfc;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  width: 33.33333333333333%;
  align-items: center;
  background-color: #e6eefc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.glamor-6 *,
[data-glamor-6] *,
.glamor-6 *::before,
[data-glamor-6] *::before,
.glamor-6 *::after,
[data-glamor-6] *::after {
  box-sizing: inherit;
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "Box": [Function],
            "DemoLayout": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <glamorous(div)>
              <div
                className="glamor-9"
              >
                <glamorous(Box)
                  width="10em"
                >
                  <Box
                    className="glamor-1"
                    element="div"
                    width="10em"
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                      width="10em"
                    >
                      <div
                        className="glamor-0"
                      >
                        A
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
                <glamorous(Box)
                  width={100}
                >
                  <Box
                    className="glamor-1"
                    element="div"
                    width={100}
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                      width={100}
                    >
                      <div
                        className="glamor-3"
                      >
                        B
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
                <glamorous(Box)
                  width={0.3333333333333333}
                >
                  <Box
                    className="glamor-1"
                    element="div"
                    width={0.3333333333333333}
                  >
                    <glamorous(div)
                      className="glamor-1"
                      element="div"
                      width={0.3333333333333333}
                    >
                      <div
                        className="glamor-6"
                      >
                        C
                      </div>
                    </glamorous(div)>
                  </Box>
                </glamorous(Box)>
              </div>
            </glamorous(div)>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;
